<resources>
    <string name="app_name">Social Media</string>
    <string name="txt_already_have_account">Already have an account?<font color="#2196F3">Login</font></string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_password">Password</string>
    <string name="txt_password_confirm">Confirm Password</string>
    <string name="txt_password_hint">........</string>
    <string name="txt_username">Username</string>
    <string name="txt_username_hint">cheezycode</string>
    <string name="txt_email">Email</string>
    <string name="txt_email_hint">cheezycode@gmail.com</string>
    <string name="txt_no_account_signup">Don\'t have an account? <font color="#2196F3">Register Now</font></string>
    <string name="txt_register_header">Create New Account</string>
    <string name="txt_register_subheader">Please provide all the required information</string>
    <string name="txt_login_header">Welcome Back!</string>
    <string name="txt_login_subheader">Login to get started</string>
    <string name="txt_login">Login</string>
    <string name="txt_error_message">%1$S*</string>
    <string name="abc_gmail_com">abc@gmail.com</string>
    <string name="abc">abc</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_a_comment">Add a comment ...</string>
    <string name="profile">Profile</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="invite">Invite</string>
    <string name="log_out">Log Out</string>
    <string name="posts">Posts</string>
    <string name="saved">Saved</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="liked">liked</string>
    <string name="unliked">unliked</string>
    <string name="comments">Comments</string>
</resources>