<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:navigationIcon="@drawable/baseline_arrow_back_ios_24"
            app:title="Profile" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:src="@drawable/user"
            android:padding="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView6"
            app:layout_constraintStart_toEndOf="@+id/circleImageView"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:ellipsize="end"
                android:fontFamily="@font/sf_pro_display_bold"
                android:gravity="start"
                android:maxLines="1"
                android:text="Abhinav Mahalwal"
                android:textColor="@color/black_09"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintStart_toEndOf="@+id/circleImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:drawablePadding="@dimen/_3sdp"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="abhinavmahalwal4321@gmail.com"
                android:textColor="@color/black_09"
                android:textSize="@dimen/_9ssp"
                app:layout_constraintStart_toEndOf="@+id/circleImageView"
                app:layout_constraintTop_toBottomOf="@+id/cropName" />

        </LinearLayout>

        <ImageView
            android:visibility="invisible"
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/baseline_arrow_forward_ios_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view0"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/grey_a3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout" />

    <TextView
        android:id="@+id/posts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/_5sdp"
        android:fontFamily="@font/sf_pro_display_medium"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_12sdp"
        android:text="@string/posts"
        android:textColor="@color/black_25"
        android:textSize="@dimen/_14ssp"
        app:drawableEndCompat="@drawable/baseline_arrow_forward_ios_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view0" />

    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/grey_a3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/posts" />

    <TextView
        android:id="@+id/saved"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/_5sdp"
        android:fontFamily="@font/sf_pro_display_medium"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_12sdp"
        android:text="@string/saved"
        android:textColor="@color/black_25"
        android:textSize="@dimen/_14ssp"
        app:drawableEndCompat="@drawable/baseline_bookmark_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1" />

    <View
        android:id="@+id/view01"
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/grey_a3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/saved" />

    <TextView
        android:id="@+id/invite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/_5sdp"
        android:fontFamily="@font/sf_pro_display_medium"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_12sdp"
        android:text="@string/invite"
        android:textColor="@color/black_25"
        android:textSize="@dimen/_14ssp"
        app:drawableEndCompat="@drawable/baseline_person_add_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view01" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/grey_a3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invite" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/_5sdp"
        android:fontFamily="@font/sf_pro_display_medium"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_12sdp"
        android:text="@string/log_out"
        android:textColor="@color/black_25"
        android:textSize="@dimen/_14ssp"
        app:drawableEndCompat="@drawable/round_logout_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/grey_a3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/privacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_3sdp"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/privacy_policy"
                android:textColor="@color/black_09"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="0dp"
                android:layout_height="1.5dp"
                android:layout_marginTop="1dp"
                android:background="@color/black_25"
                app:layout_constraintEnd_toEndOf="@+id/privacyPolicy"
                app:layout_constraintStart_toStartOf="@+id/privacyPolicy"
                app:layout_constraintTop_toBottomOf="@+id/privacyPolicy" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_height="wrap_content">

            <View
                android:layout_width="0dp"
                android:layout_height="1.5dp"
                android:layout_marginTop="1dp"
                android:background="@color/black_25"
                app:layout_constraintEnd_toEndOf="@+id/termsConditions"
                app:layout_constraintStart_toStartOf="@+id/termsConditions"
                app:layout_constraintTop_toBottomOf="@+id/termsConditions" />

            <TextView
                android:id="@+id/termsConditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_3sdp"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/terms_conditions"
                android:textColor="@color/black_09"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>